fix seciurity cors (#47)
Co-authored-by: Maciej Iwan <“64867638+MaciejIwan@users.noreply.github.com”>